# cityImage

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  LICENSE.txt  README.md  clean_new.py  environment.yml  otherFunctions.py  pyproject.toml  readthedocs.yaml  readthedocs.yml  requirements-all.txt  requirements.txt  setup.py
.github/workflows/: codeql.yml  quality.yml  ruff-format.yml  tests.yml
Test/: test.py
ci/envs/: latest.yml
cityImage/: __init__.py  adapters.py  angles.py  barriers.py  buildings.py  buildings_height.py  buildings_landmarks.py  buildings_load.py  buildings_visibility.py  centrality.py  clean.py  cleaning_network.py  colors.py  data_utils.py  geometry.py  graph.py  graph_centrality.py  graph_clean.py  graph_consolidate.py  graph_load.py  graph_topology.py  height.py  io.py  land_use.py  land_use_assign.py  land_use_classify.py  land_use_derive.py  land_use_obsolete.py  land_use_sparse.py  land_use_tags.py  land_use_utils.py  landmarks.py  landmarks_integration.py  load.py  network.py  network_topology.py  osm.py  pedestrian.py  plot.py  plot.py.bak  (+14 more)
cityImage/landuse/: __init__.py  assign.py  classify.py  derive.py  sparse.py  tags.py  utils.py
cityImage/plotting/: __init__.py  colors.py  static.py
docs/: DOCS_CLEANUP_REPORT.md  Makefile  about.md  api.rst  conf.py  environment.yml  index.rst  logo.pptx  requirements.txt
docs/api/: cityImage.along_within_parks.rst  cityImage.amend_nodes_membership.rst  cityImage.angle_line_geometries.rst  cityImage.assign_structuring_barriers.rst  cityImage.calculate_centrality.rst  cityImage.compute_global_scores.rst  cityImage.district_to_nodes_from_edges.rst  cityImage.districts_to_edges_from_nodes.rst  cityImage.envelope_wgs.rst  cityImage.facade_area.rst  cityImage.get_barriers.rst  cityImage.get_buildings_fromOSM.rst  cityImage.get_historical_buildings_fromOSM.rst  cityImage.get_network_fromFile.rst  cityImage.identify_regions_primal.rst  cityImage.kindlmann.rst  cityImage.land_use_from_other_gdf.rst  cityImage.nodes_degree.rst  cityImage.number_neighbours.rst  cityImage.plot_gdf.rst  cityImage.plot_grid_gdfs_column.rst  cityImage.polygon_2d_to_3d.rst  cityImage.rand_cmap.rst  cityImage.road_barriers.rst  cityImage.split_line_at_MultiPoint.rst  cityImage.structural_score.rst  cityImage.visibility_score.rst  cityImage.weight_nodes.rst
docs/cityimage_docs_folder_fixed/: requirements.txt
docs/development/: module_ownership.md
docs/notebooks/: Barriers.ipynb  Districts_Local_Files.ipynb  Districts_fromOSM.ipynb  Landmarks_Local_Files.ipynb  Landmarks_fromOSM.ipynb  NetworkCleaning.ipynb  Nodes_Paths_Local_Files.ipynb  Nodes_Paths_fromOSM.ipynb  userGuide.rst
docs/otherExamples/: utilities.ipynb
docs/source/: cityImage.rst  conf.py  index.rst
scripts/: audit_optional_import_boundaries.py  audit_refactor_boundaries.py  report_module_ownership.py
tests/: test.py  test_adapters.py  test_adapters_standardize.py  test_angles_core_module.py  test_angles_orientations.py  test_barriers_assignment.py  test_barriers_module.py  test_buildings_module.py  test_centrality_module.py  test_centrality_regions_network.py  test_cityImage.py  test_core_helpers.py  test_dependency_boundaries.py  test_graph_core_module.py  test_height_module.py  test_height_rasters.py  test_io_bridge_api.py  test_io_files.py  test_land_use_compat.py  test_landmarks.py  test_landmarks_scores.py  test_landmarks_unit.py  test_landuse.py  test_landuse_assign.py  test_landuse_classify.py  test_landuse_derive.py  test_landuse_derive_osm.py  test_landuse_sparse.py  test_landuse_sparse_extra.py  test_landuse_utils.py  test_lazy_import.py  test_local.py  test_network_from_lines.py  test_network_module.py  test_network_topology_regression.py  test_optional_dependency_boundaries.py  test_osm_bridge_api.py  test_osm_mocked.py  test_pedestrian_dispatch.py  test_pedestrian_network.py  (+13 more)
tests/fixtures/: __init__.py  cityimage_minimal.py
tests/input/: Muenster_buildings.dbf  Muenster_buildings.shp  Muenster_buildings.shx  Muenster_buildings_attributes_clipped.gpkg  Muenster_buildings_clipped.gpkg  Muenster_obstructions.dbf  Muenster_sight_lines.shx  Muenster_sight_lines.xml  Muenster_street_network.dbf  Muenster_street_network.shp  Paris_stations.shp  (+6 more)
urbanFormPy/: __init__.py  __init__.py.py  angles.py  barriers.py  centrality.py  clean_network.py  cleaning_network.py  community.py  graph.py  land_use.py  land_use_classification.py  landmarks.py  landmarks_functions.py  landmarks_integration.py  landmarks_integration_functions.py  load.py  louvain.py  natural_roads.py  plotting.py  regions.py  regions_short.py  simplification.py  simplify.py  street_hierarchy.py  transport_network.py  utilities.py
(+265 files in other folders)
