[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cityImage"
version = "1.2.3"
description = "A package for studying urban form and obtaining the computational Image of the City"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GPL-3.0-only" }
authors = [
  { name = "Gabriele Filomena", email = "gabriele.filomena@liverpool.ac.uk" }
]
keywords = ["urban form analysis", "computational image of the city", "Kevin Lynch", "cognitive maps"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
  "dask>=2025.7.0",
  "geopandas>=1.1.1",
  "igraph>=0.11.9",
  "mapclassify>=2.6",
  "matplotlib>=3.8",
  "networkx>=3.3",
  "numba>=0.61.2",
  "numpy>=2.0",
  "osmnx>=2.0.5",
  "pandas>=2.2",
  "pyproj>=3.4",
  "python-louvain>=0.16",
  "pyvista>=0.45.3",
  "shapely>=2.1",
  "tqdm>=4.65.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8",
  "pytest-cov>=5",
]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "build>=1.2",
  "twine>=5",
  "ruff>=0.6",
  "mypy>=1.10",
]

[project.urls]
Homepage = "https://github.com/g-filomena/cityImage"
Documentation = "https://cityimage.readthedocs.io"
Repository = "https://github.com/g-filomena/cityImage"

[tool.setuptools.packages.find]
include = ["cityImage*"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers --disable-warnings"
testpaths = ["tests"]
markers = [
  "network: tests that call live OpenStreetMap/OSMnx services",
  "slow: long-running integration tests",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]
